# invoiceRust

./: PERMISSIONS_V2.md  README.md  SIDEBAR_IMPROVEMENTS.md  package-lock.json  package.json  uninstall-nyxo.sh
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  pdf.rs
